# insta-kills-tutorial

./: .gitignore  Cargo.toml  tutorial.html
assets/map/: level.ldtk
assets/player/: player.trickfilm
src/: animation.rs  assets.rs  main.rs
src/player/: input.rs  mod.rs  movement.rs  spawn.rs  state.rs
src/world/: camera.rs  camera_shake.rs  mod.rs
