[package]
name = "insta-kills"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
bevy_asset_loader = { version = "0.25.0", features = ["2d"] }
ron = "0.12.2"
serde = "1.0.228"
thiserror = "2.0.18"
bevy_rapier2d = "0.33.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
